# SkyDecoder

./: .gitignore  CMakeLists.txt  README.md  concat.py
data/asterix_categories/: cat02.xml
example/: simple_test  simple_test.cpp
include/skydecoder/: asterix_decoder.h  asterix_types.h  field_parser.h  utils.h  xml_parser.h
src/: asterix_decoder.cpp  decode_asterix.cpp  field_parser.cpp  utils.cpp  xml_parser.cpp
